fix: Use SDK versions of the root project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-orientation",
+  "name": "@gergof/react-native-orientation",
   "version": "3.1.3",
   "description": "Listen to device orientation changes in React Native applications and programmatically set preferred orientations on a per screen basis",
   "main": "index.js",
@@ -18,6 +18,10 @@
   "author": "Yamill Vallecillo <yamill@gmail.com> (github.com/yamill)",
   "contributors": [
     {
+      "name" : "Fándly Gergő",
+      "email" : "gergo@paymoapp.com"
+    },
+    {
       "name" : "André Neves",
       "email" : "@andrerfneves",
       "url" : "https://andrenev.es"
@@ -30,12 +34,12 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yamill/react-native-orientation.git"
+    "url": "git+https://github.com/gergof/react-native-orientation"
   },
   "bugs": {
-    "url": "https://github.com/yamill/react-native-orientation/issues"
+    "url": "https://github.com/gergof/react-native-orientation/issues"
   },
-  "homepage": "https://github.com/yamill/react-native-orientation#readme",
+  "homepage": "https://github.com/gergof/react-native-orientation#readme",
   "rnpm": {
     "android": {
       "packageInstance": "new OrientationPackage()"
